--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ footer {
     background-color: rgb(173, 200, 251);
     color: #fff;
     padding: 5px 0;
-    text-align: center;
+    text-align: left;
     position: fixed;
     bottom: 0;
     width: 100%;
